scripts/nullaway/original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8.txt
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:47: warning: Signal is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
                              ^
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:47: warning: SignalHandler is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
                                                   ^
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:48: warning: Signal is internal proprietary API and may be removed in a future release
                public synchronized void handle (Signal signal) {
                                                 ^
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:47: warning: Signal is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
            ^
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/screen/ScreenImpl.java:175: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    fill(x, y, w, h, null);
                                     ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/Key.java:56: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.cursorLocation = null;
                            ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/Key.java:63: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.cursorLocation = null;
                            ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/util/U.java:85: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            msg(null);
                ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/util/U.java:106: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            msg(null);
                ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Resize.java:9: error: [NullAway] @NonNull static field t not initialized
    private static Terminal t;
                            ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Matching.java:15: error: [NullAway] @NonNull static field t not initialized
    static       UnixTerminal t;
                              ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:18: error: [NullAway] dereferenced expression System.console() is @Nullable
        return HAVE_CONSOLE ? System.console().writer() : new OutputStreamWriter(System.out);
                                              ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:22: error: [NullAway] dereferenced expression System.console() is @Nullable
        return HAVE_CONSOLE ? System.console().reader() : new InputStreamReader(System.in);
                                              ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/TerminalImpl.java:33: error: [NullAway] initializer method does not guarantee @NonNull field watchDog (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TerminalImpl (TerminalType type, Reader in, Writer out) {
           ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/TerminalImpl.java:273: error: [NullAway] assigning @Nullable expression to @NonNull field
        watchDog = null;
                 ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/TerminalImpl.java:274: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        inputDecoder.setScreenSize(null);
                                   ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/TerminalImpl.java:330: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            inputDecoder.setProbeSizeHandler(null);
                                             ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/InputDecoder.java:22: error: [NullAway] initializer method does not guarantee @NonNull fields lastTerminalSize (line 19), probeSizeHandler (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public InputDecoder (final Reader source, TerminalType type) {
           ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/SimpleInputPattern.java:22: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:13: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:17: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:29: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
../original/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:41: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
19 errors
4 warnings
